--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/home.css"></link>
+        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<script> src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 		</script>
 		<title>
@@ -16,5 +17,7 @@
 		<div id="mycreation">
 		<img class="homeImg" src=images/confession.jpg>	
 		</div>
+        <i class="fa fa-angle-right fa-4x" aria-hidden="true"></i>
+        <i class="fa fa-angle-left fa-4x" aria-hidden="true"></i>
 	</body>
 </html>
