--- a/home.html
+++ b/home.html
@@ -19,5 +19,8 @@
 		</div>
         <i class="fa fa-angle-right fa-4x" aria-hidden="true"></i>
         <i class="fa fa-angle-left fa-4x" aria-hidden="true"></i>
+        <i class="fa fa-dot-circle-o" id="i1" aria-hidden="true"></i>
+        <i class="fa fa-circle-o" id="i2" aria-hidden="true"></i>
+        <i class="fa fa-circle-o" id="i3" aria-hidden="true"></i>
 	</body>
 </html>
