--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="css/home.css"></link>
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<script> src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 		</script>
 		<title>
