--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<script> src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 		</script>
 		<title>
@@ -22,5 +23,7 @@
         <i class="fa fa-dot-circle-o" id="i1" aria-hidden="true"></i>
         <i class="fa fa-circle-o" id="i2" aria-hidden="true"></i>
         <i class="fa fa-circle-o" id="i3" aria-hidden="true"></i>
+	<a class="btn btn-lg btn-primary" id="see" href="#" role="button">See confessions</a>
+	<a class="btn btn-lg btn-primary" id="make" href="#" role="button">Make confession</a>
 	</body>
 </html>
