modified css/home.css home.html

--- a/home.html
+++ b/home.html
@@ -11,19 +11,21 @@
 	<meta charset="utf-8"/>
 	</head>
 	<body>
-		<header>
-			<span id="admin">ADMIN LOGIN</span>
-			<span id="about">ABOUT</span>
-		</header>
+		<nav>
+			<ul>
+				<li id="admin">
+					<a  href="#" >ADMIN LOGIN</a>
+				</li>
+				<li id="about">
+					<a href="#">ABOUT US</a>
+				</li>
+			</ul>
+		</nav>
+		
 		<div id="mycreation">
 		<img class="homeImg" src=images/confession.jpg>	
 		</div>
-        <i class="fa fa-angle-right fa-4x" aria-hidden="true"></i>
-        <i class="fa fa-angle-left fa-4x" aria-hidden="true"></i>
-        <i class="fa fa-dot-circle-o" id="i1" aria-hidden="true"></i>
-        <i class="fa fa-circle-o" id="i2" aria-hidden="true"></i>
-        <i class="fa fa-circle-o" id="i3" aria-hidden="true"></i>
-	<a class="btn btn-lg btn-primary" id="see" href="#" role="button">See confessions</a>
-	<a class="btn btn-lg btn-primary" id="make" href="#" role="button">Make confession</a>
+		<a class="btn btn-lg btn-primary" id="see" href="#" role="button">See confessions</a>
+		<a class="btn btn-lg btn-primary" id="make" href="#" role="button">Make confession</a>
 	</body>
 </html>
