added login.html and deleted useless images

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 		<nav>
 			<ul>
 				<li id="admin">
-					<a  href="#" >ADMIN LOGIN</a>
+					<a  href="login.html" >ADMIN LOGIN</a>
 				</li>
 				<li id="about">
 					<a href="#">ABOUT US</a>
