added dropdown button on homepage during mobile view

--- a/aboutusconfession/about.html
+++ b/aboutusconfession/about.html
@@ -8,7 +8,7 @@
           <link type="text/css" rel="stylesheet" href="about.css">
     </head>
     <body>
-   <img class="logo" src="logo.png" alt="exe logo" style="width:25%;height:25%;">
+   <img class="logo" src="logatic.png" alt="exe logo" style="width:25%;height:25%;">
    
    <a href="https://www.facebook.com/teamexe/">
    <img id="fb" src="facebook.png" align="right" alt="facebook" onmouseover="bigImg(this)" onmouseout="normalImg(this)" title="Like us on facebook" style="width:3%;height:3%">
